deleted clientSecret for PIN authentication scope moretv

--- a/app/config/sam3.preprod.config.json
+++ b/app/config/sam3.preprod.config.json
@@ -29,7 +29,7 @@
         },
         "default": {
             "clientID": "10TVL1SAM30000004901NGTVAUTHMANAGER00000",
-            "clientSecret": "BBAP3FG2-LW3K-L2MQ-WMBS-96WPMNF893MC"
+            "clientSecret": ""
         }
     },
     // only for TU
