--- a/app/config/sam3.tu.config.json
+++ b/app/config/sam3.tu.config.json
@@ -33,7 +33,7 @@
         },
         "default": {
             "clientID": "10TVL0SAM30000004901NGTVAUTHMANAGER00000",
-            "clientSecret": "MWLP3F9K-9438-L294-WMBR-DLWPMNF893DJ"
+            "clientSecret": ""
         }
     },
     // only for TU
