--- a/app/config/sam3.prod.config.json
+++ b/app/config/sam3.prod.config.json
@@ -33,7 +33,7 @@
         },
         "default": {
             "clientID": "10LIVESAM30000004901NGTVAUTHMANAGER00000",
-            "clientSecret": "CLWN392N-92LP-LKMW-5M34-QPMRNVU274BE"
+            "clientSecret": ""
         }
     },
 	"mock": {
